# total-recall

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/total_recall/: __init__.py  crypto.py  db.py  embeddings.py  hook.py  models.py  net.py  serialization.py  server.py
tests/: test_backup.py  test_crypto.py  test_db.py  test_embeddings.py  test_net.py  test_serialization.py  test_server.py
