[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "total-recall"
version = "0.1.0"
description = "A Python MCP server for contextual memory storage with semantic search"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
total-recall = "total_recall.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/total_recall"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
